deployment/control-plane/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sardeenz-control-plane
  labels:
    app.kubernetes.io/name: sardeenz-control-plane
spec:
  selector:
    app.kubernetes.io/name: sardeenz-control-plane
  ports:
    - name: http
      port: 3000
      targetPort: http
